// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pageBreakInside renders 0 1`] = `
Array [
  .c0 {
  page-break-inside: 0;
}

<div
    className="c0"
  />,
  .c0 {
  page-break-inside: 0;
}

<div
    className="c0"
  />,
  .c0 {
  page-break-inside: 0;
}

<div
    className="c0"
  />,
  .c0 {
  page-break-inside: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`pageBreakInside renders function 1`] = `
Array [
  .c0 {
  page-break-inside: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  page-break-inside: has;
}

<div
    className="c0"
  />,
  .c0 {
  page-break-inside: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  page-break-inside: has;
}

<div
    className="c0"
  />,
]
`;

exports[`pageBreakInside renders invalid theme path 1`] = `
Array [
  .c0 {
  page-break-inside: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  page-break-inside: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  page-break-inside: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  page-break-inside: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`pageBreakInside renders negative number 1`] = `
Array [
  .c0 {
  page-break-inside: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  page-break-inside: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  page-break-inside: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  page-break-inside: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`pageBreakInside renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  page-break-inside: July;
}

@media screen and (min-width:November) {
  .c0 {
    page-break-inside: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    page-break-inside: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    page-break-inside: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    page-break-inside: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  page-break-inside: July;
}

@media screen and (min-width:November) {
  .c0 {
    page-break-inside: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    page-break-inside: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    page-break-inside: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    page-break-inside: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  page-break-inside: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    page-break-inside: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    page-break-inside: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    page-break-inside: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    page-break-inside: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  page-break-inside: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    page-break-inside: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    page-break-inside: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    page-break-inside: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    page-break-inside: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`pageBreakInside renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    page-break-inside: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    page-break-inside: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    page-break-inside: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    page-break-inside: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    page-break-inside: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    page-break-inside: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    page-break-inside: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    page-break-inside: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    page-break-inside: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    page-break-inside: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    page-break-inside: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    page-break-inside: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    page-break-inside: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    page-break-inside: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    page-break-inside: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    page-break-inside: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`pageBreakInside renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  page-break-inside: July;
}

@media May {
  .c0 {
    page-break-inside: August;
  }
}

@media April {
  .c0 {
    page-break-inside: September;
  }
}

@media January {
  .c0 {
    page-break-inside: November;
  }
}

@media April {
  .c0 {
    page-break-inside: August;
  }
}

@media June {
  .c0 {
    page-break-inside: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  page-break-inside: July;
}

@media May {
  .c0 {
    page-break-inside: August;
  }
}

@media April {
  .c0 {
    page-break-inside: September;
  }
}

@media January {
  .c0 {
    page-break-inside: November;
  }
}

@media April {
  .c0 {
    page-break-inside: August;
  }
}

@media June {
  .c0 {
    page-break-inside: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  page-break-inside: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    page-break-inside: November;
  }
}

@media April {
  .c0 {
    page-break-inside: January;
  }
}

@media January {
  .c0 {
    page-break-inside: December;
  }
}

@media April {
  .c0 {
    page-break-inside: April;
  }
}

@media June {
  .c0 {
    page-break-inside: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  page-break-inside: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    page-break-inside: November;
  }
}

@media April {
  .c0 {
    page-break-inside: January;
  }
}

@media January {
  .c0 {
    page-break-inside: December;
  }
}

@media April {
  .c0 {
    page-break-inside: April;
  }
}

@media June {
  .c0 {
    page-break-inside: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`pageBreakInside renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    page-break-inside: July;
  }
}

@media April {
  .c0 {
    page-break-inside: August;
  }
}

@media January {
  .c0 {
    page-break-inside: September;
  }
}

@media April {
  .c0 {
    page-break-inside: November;
  }
}

@media June {
  .c0 {
    page-break-inside: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    page-break-inside: July;
  }
}

@media April {
  .c0 {
    page-break-inside: August;
  }
}

@media January {
  .c0 {
    page-break-inside: September;
  }
}

@media April {
  .c0 {
    page-break-inside: November;
  }
}

@media June {
  .c0 {
    page-break-inside: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    page-break-inside: January;
  }
}

@media April {
  .c0 {
    page-break-inside: December;
  }
}

@media January {
  .c0 {
    page-break-inside: April;
  }
}

@media April {
  .c0 {
    page-break-inside: May;
  }
}

@media June {
  .c0 {
    page-break-inside: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    page-break-inside: January;
  }
}

@media April {
  .c0 {
    page-break-inside: December;
  }
}

@media January {
  .c0 {
    page-break-inside: April;
  }
}

@media April {
  .c0 {
    page-break-inside: May;
  }
}

@media June {
  .c0 {
    page-break-inside: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`pageBreakInside renders postitive number 1`] = `
Array [
  .c0 {
  page-break-inside: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  page-break-inside: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  page-break-inside: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  page-break-inside: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`pageBreakInside renders string 1`] = `
Array [
  .c0 {
  page-break-inside: July;
}

<div
    className="c0"
  />,
  .c0 {
  page-break-inside: July;
}

<div
    className="c0"
  />,
  .c0 {
  page-break-inside: June;
}

<div
    className="c0"
  />,
  .c0 {
  page-break-inside: June;
}

<div
    className="c0"
  />,
]
`;

exports[`pageBreakInside renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`pageBreakInside renders valid theme path 1`] = `
Array [
  .c0 {
  page-break-inside: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  page-break-inside: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  page-break-inside: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  page-break-inside: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
